--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,13 @@
 version: "3.7"
-
 services:
-    web:
-        build: nginx
-        ports:
-          - 80:80
-          - 443:443
-        depends_on:
-          - api
-
     api:
-        build: domainchecker
-        environment:
-          - PORT=8080
         ports:
-          - 8080:8080
+            - '80:80/tcp'
+        image: 'metro-api-v2'
+        build:
+            context: .
+            dockerfile: Dockerfile
+        environment:
+            FTP_SERVER: ${FTP_SERVER}
+            FTP_USERNAME: ${FTP_USERNAME}
+            FTP_PASS: ${FTP_PASS}
