--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Build & Publish Docker Image
+name: Build and publish Docker Image to DockerHub
 
 on:
   push:
