--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@
 name: Build and publish Docker Image to DockerHub
 
 on:
-  push:
-    branches: 
-      - main
+  # push:
+    # branches: 
+      # - main
   pull_request:
 
 jobs:
