--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -59,7 +59,7 @@ jobs:
           --region us-west-2
           --service-name metro-api-v2
           --label latest
-          --image lacmta/metro-api-v2:latest
+          --image metro-api-v2:latest
       # - name: Deploy Docker Image to Lightsail
       #   run: >
       #     aws lightsail push-container-image
