--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,11 +55,9 @@ jobs:
           tags: lacmta/metro-api-v2:latest
       - name: Push Updated Docker Image on Lightsail
         run: >
-          aws lightsail push-container-image
-          --region us-west-2
+          aws lightsail create-container-service-deployment
           --service-name metro-api-v2
-          --label latest
-          --image metro-api-v2:latest
+          --containers fastapi={image=lacmta/metro-api-v2:latest}
       # - name: Deploy Docker Image to Lightsail
       #   run: >
       #     aws lightsail push-container-image
