--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,9 +55,9 @@ jobs:
           tags: lacmta/metro-api-v2:latest
       - name: Push Updated Docker Image on Lightsail
         run: >
-          aws lightsail create-container-service-deployment
-          --service-name metro-api-v2
-          --containers fastapi={image=lacmta/metro-api-v2:latest}
+          aws lightsail create-container-service-deployment 
+          --service-name metro-api-v2 
+          --containers '{"metro-api-v2-dev": {"image":"lacmta/metro-api-v2:latest","ports":{"80":"HTTP"},"environment":{"FTP_PASS":${{secrets.FTP_PASS }},"FTP_SERVER":${{secrets.FTP_SERVER }},"FTP_USERNAME":${{secrets.FTP_USERNAME }}}}}' --public-endpoint '{"containerName": "metro-api-v2-dev","containerPort": 80,"healthCheck":{ "healthyThreshold": 2,"unhealthyThreshold": 2,"timeoutSeconds": 2,"intervalSeconds": 5,"path": "/dev","successCodes": "200-499"}}'
       # - name: Deploy Docker Image to Lightsail
       #   run: >
       #     aws lightsail push-container-image
